# vibe-coded

aiwatch/: README.md  aiwatch.toml  install.bat  pyproject.toml
aiwatch/aiwatch/: __main__.py  bell_gen.py  config.py  notifier.py  watcher.py  window_manager.py
aiwatch/aiwatch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
volunteer-dashboard/: README.md  launch.bat  package-lock.json  package.json
volunteer-dashboard/__tests__/api/: search.test.ts
volunteer-dashboard/__tests__/components/: FilterBar.test.tsx  ResultCard.test.tsx  ResultsGrid.test.tsx  SearchBar.test.tsx
volunteer-dashboard/__tests__/lib/: serper.test.ts
volunteer-dashboard/src/app/: layout.tsx  page.tsx
volunteer-dashboard/src/app/api/search/: route.ts
volunteer-dashboard/src/components/: FilterBar.tsx  ResultCard.tsx  ResultsGrid.tsx  SearchBar.tsx  SkeletonCard.tsx
volunteer-dashboard/src/lib/: serper.test.ts  serper.ts
volunteer-dashboard/src/types/: index.ts
